# big-brain

./: README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/migrations/: 20240804041238_create_decks_table.sql  20240806081335_create_questions_table.sql
src-tauri/src/: decks.rs  error.rs  main.rs  questions.rs  state.rs  utils.rs
src-tauri/src/utils/: dirs.rs  image.rs
src/app/: layout.tsx  page.tsx
src/app/analysis/: page.tsx
src/app/community/: page.tsx
src/app/decks/: layout.tsx  page.tsx
src/app/decks/card/: page.tsx
src/app/decks/new/: page.tsx
src/app/decks/questions/: page.tsx
src/app/decks/questions/new/: page.tsx
src/app/study/: page.tsx
src/components/: Sidebar.tsx  index.tsx
src/components/Settings/: Backups.tsx  Settings.tsx
src/components/global/: Button.tsx
src/components/global/Editor/: Editor.tsx  EditorPreview.tsx  MenuBar.tsx  content.css  editor.css
src/components/global/Toasts/: Toast.tsx
src/components/layout/: Sidebar.tsx
src/components/layout/Settings/: About.tsx  Appearance.tsx  Settings.tsx
src/slices/: toasts.slice.ts
src/styles/: app.css  theme.css
src/typings/: deck.ts
